syntax = "proto3";

package kyve.compliance.v1beta1;

import "gogoproto/gogo.proto";
import "kyve/compliance/v1beta1/params.proto";
import "kyve/compliance/v1beta1/types.proto";

option go_package = "github.com/KYVENetwork/chain/x/compliance/types";

// GenesisState defines the compliance module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];

  // MultiCoinPendingRewardsEntry ...
  repeated MultiCoinPendingRewardsEntry multi_coin_pending_rewards_entries = 2 [(gogoproto.nullable) = false];
  // queue_state_state_fraction ...
  QueueState queue_state_pending_rewards = 3 [(gogoproto.nullable) = false];

  // multi_coin_enabled ...
  repeated string multi_coin_enabled = 4;

  // multi_coin_refund_policy ...
  MultiCoinRefundPolicy multi_coin_refund_policy = 5;
}
